# adaptive-teaming

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
adaptive_teaming/envs/: __init__.py  gridworld.py  gridworld_interaction_env.py  interaction_env.py  med_gridworld.py  pick_place.py  pick_place_interaction_env.py
adaptive_teaming/grid_toy_env/: skill_mdp.py
adaptive_teaming/no_movement_toy_env/: interaction_mdp.py  skill_mdp.py
adaptive_teaming/planner/: __init__.py  base_planner.py  confidence_learner_planner.py  facility_location_planner.py  facility_location_planner_saved.py  info_gain_planner.py  naive_greedy_planner.py  pref_belief_estimator.py  pref_belief_estimator_saved.py
adaptive_teaming/skills/: gridworld_skills.py  pick_place_skills.py
adaptive_teaming/utils/: collect_demos.py
basic_toy/: interaction_mdp.py
basic_toy_env/: interaction_mdp.py
cfg/: run_interaction_planner.yaml  run_interaction_planner_med.yaml  run_interaction_planner_multi_exp.yaml
cfg/cost_cfg/: high_cost_human.yaml  low_cost_human.yaml  (+1 more)
grid_toy_env/: interaction_mdp.py  skill_mdp.py
no_movement_toy_env/: bc_policy.pt  skill_mdp.py
notebooks/: Explore Causal Confusion - Plot Confusion, Make Update with Reward only (Nov 28) copy.ipynb  Prototype.ipynb
planner/: facility_location_planner.py
scripts/: run_interaction_planner.py  run_multiple_exps_interaction_planner.py  test_Bar.py
src/: bc_policy.pt  interaction_mdp.py
tests/: test_belief_estimator.py  test_gridworld.py
toy_env/: bc_policy.pt  interaction_mdp.py
utils/: object.py
